# Blinker

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  release.bat  release.ps1
.github/workflows/: release.yml  tag.yml
assets/: make_icon.ps1
docs/: Doxyfile  architecture.md  blinker.ini.example
src/core/: annotation_edit.cpp  annotation_edit.h  app.cpp  app.h  command.h  config.cpp  config.h  dib.cpp  dib.h  edit.cpp  edit.h  exif.cpp  exif.h  geometry.h  help.cpp  help.h  image_cache.cpp  image_cache.h  image_list.cpp  image_list.h  keymap.cpp  keymap.h  pixel_convert.cpp  pixel_convert.h  str_util.h  text_edit.cpp  text_edit.h  text_style.cpp  text_style.h  unicode.cpp  unicode.h  version.h.in  viewport.cpp  viewport.h
src/platform/: annotation.h  clipboard.h  decoder.h  encoder.h  file_system.h  image_formats.h  renderer.h
src/sdl/: annotation_stub.h  clipboard_sdl.cpp  clipboard_sdl.h  decoder_stb.cpp  decoder_stb.h  encoder_stb.cpp  encoder_stb.h  file_system_posix.cpp  file_system_posix.h  font_stb.cpp  font_stb.h  main_sdl.cpp  renderer_sdl.cpp  renderer_sdl.h  stb_impl.cpp  window_sdl.cpp  window_sdl.h
src/win/: annotation_d2d.cpp  annotation_d2d.h  annotation_draw.cpp  annotation_draw.h  blinker.manifest  blinker.rc  blinker.rc.in  clipboard_win.cpp  clipboard_win.h  decoder_wic.cpp  decoder_wic.h  encoder_wic.cpp  encoder_wic.h  file_system_win.cpp  file_system_win.h  main_win.cpp  renderer_d2d.cpp  renderer_d2d.h  wic_factory.cpp  wic_factory.h  window_win.cpp  window_win.h
tests/: CMakeLists.txt  core_tests.cpp
